; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/sbni/extr_if_sbni.c_sbni_inb.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/sbni/extr_if_sbni.c_sbni_inb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sbni_softc = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.sbni_softc*, i32)* @sbni_inb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @sbni_inb(%struct.sbni_softc* %0, i32 %1) #0 {
  %3 = alloca %struct.sbni_softc*, align 8
  %4 = alloca i32, align 4
  store %struct.sbni_softc* %0, %struct.sbni_softc** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.sbni_softc*, %struct.sbni_softc** %3, align 8
  %6 = getelementptr inbounds %struct.sbni_softc, %struct.sbni_softc* %5, i32 0, i32 1
  %7 = load i32, i32* %6, align 4
  %8 = call i32 @rman_get_bustag(i32 %7)
  %9 = load %struct.sbni_softc*, %struct.sbni_softc** %3, align 8
  %10 = getelementptr inbounds %struct.sbni_softc, %struct.sbni_softc* %9, i32 0, i32 1
  %11 = load i32, i32* %10, align 4
  %12 = call i32 @rman_get_bushandle(i32 %11)
  %13 = load %struct.sbni_softc*, %struct.sbni_softc** %3, align 8
  %14 = getelementptr inbounds %struct.sbni_softc, %struct.sbni_softc* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = load i32, i32* %4, align 4
  %17 = add i32 %15, %16
  %18 = call i32 @bus_space_read_1(i32 %8, i32 %12, i32 %17)
  ret i32 %18
}

declare dso_local i32 @bus_space_read_1(i32, i32, i32) #1

declare dso_local i32 @rman_get_bustag(i32) #1

declare dso_local i32 @rman_get_bushandle(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
